# homework_13.1

./: .gitignore  README.md  config.py  functions.py  main.py  pyproject.toml
data/: products.json
tests/: test_category.py  test_product.py
utils/: any_category.py  any_product.py  category.py  lawngrass.py  mixin_repr.py  other_object.py  product.py  smartphone.py
