[tool.poetry]
name = "homework-13-1"
version = "0.1.0"
description = ""
authors = ["Sergey Atkov <bersercwow@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_13"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
